<resources>
    <string name="app_name">Calculator</string>
    <string name="num_0">0</string>
    <string name="result">=</string>
    <string name="delete">删除</string>
    <string name="add">+</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="sub">-</string>
    <string name="cheng">*</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="NumberFormatException">One of the arguments is error</string>
</resources>
